--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -651,7 +651,7 @@
             display: none;
           }
           h3 {
-            margin-top: 0;
+            margin-top: 2.5rem;
             font-size: 2rem;
             color: #b48821;
             text-align: center;
