--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -700,6 +700,15 @@
         margin-bottom: -2.5rem;
       }
     }
+
+    /* Gallery Componenet */
+
+    .gallery-container {
+      h2 {
+        margin-top: -3rem;
+        padding-bottom: 1rem;
+      }
+    }
     /* Footer component */
     footer {
       .scroll-to-top {
