the h1 from the ourTeam component has been changed to h2

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -895,9 +895,9 @@
 /* Out Team Component */
 
 .teamheading {
+  @include heading-2-style;
   text-align: center;
-  padding: 5rem 0;
-  color: #b48821;
+  padding-bottom: 1.8rem;
 }
 .profilecard {
   display: flex;
