--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -254,6 +254,7 @@
       font-family: "Roboto-Medium";
       font-size: 1.5rem;
       max-width: 80%;
+      text-align: center;
     }
   }
 }
@@ -731,6 +732,7 @@
 
     p {
       margin-bottom: $margin-size;
+      text-align: center;
     }
 
     .booking-info-container {
@@ -978,7 +980,6 @@ footer {
 
     .logo-container {
       display: flex;
-      align-items: center;
 
       /*  .logo {
         @include logo-font-style;
