creating text for replacing the dummy text

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -989,6 +989,7 @@ footer {
     }
     .logo {
       padding: 5rem 1rem;
+      margin-top: -1rem;
 
       h1 {
         @include logo-font-style;
